fix: not providing correct filepath for db dockerfile

--- a/.github/workflows/build-images.yml
+++ b/.github/workflows/build-images.yml
@@ -19,7 +19,7 @@ jobs:
             context: ./server
             image: smaugthur/pokesocket-server
           - name: db
-            context: ./db
+            context: ./db/game
             image: smaugthur/pokesocket-db
 
     steps:
