--- a/.github/workflows/build-images.yml
+++ b/.github/workflows/build-images.yml
@@ -14,13 +14,13 @@ jobs:
         service:
           - name: client
             context: ./client
-            image: smaugthur/pokesocket-client
+            image: smaugtur/pokesocket-client
           - name: server
             context: ./server
-            image: smaugthur/pokesocket-server
+            image: smaugtur/pokesocket-server
           - name: db
             context: ./db/game
-            image: smaugthur/pokesocket-db
+            image: smaugtur/pokesocket-db
 
     steps:
       - name: Checkout repository
