--- a/compose.yml
+++ b/compose.yml
@@ -35,6 +35,7 @@ services:
       POSTGRES_DB: postgres
     volumes:
       - postgres_data:/var/lib/postgresql/data
+      - ./db/game/migrations:/docker-entrypoint-initdb.d  # Auto-run SQL files on first start
     restart: unless-stopped
 
 networks:
