feat: create connection object to handle messages sending more optimally

--- a/server/sqlc.yaml
+++ b/server/sqlc.yaml
@@ -5,6 +5,6 @@ sql:
     schema: "../db/game/schema.sql"
     gen:
       go:
-        package: "users_db"
+        package: "game_db"
         sql_package: "pgx/v5"
         out: "./internal/storage/postgres_cli/game_db"
