--- a/server/.air.toml
+++ b/server/.air.toml
@@ -1,6 +1,5 @@
 #:schema https://json.schemastore.org/any.json
 
-env_files = []
 root = "."
 testdata_dir = "testdata"
 tmp_dir = "tmp"
@@ -8,16 +7,14 @@ tmp_dir = "tmp"
 [build]
   args_bin = []
   bin = "./tmp/main"
-  cmd = "go build -o ./tmp/main ./cmd"
+  cmd = "go build -o ./tmp/main ./cmd/main.go"
   delay = 1000
-  entrypoint = ["./tmp/main"]
   exclude_dir = ["assets", "tmp", "vendor", "testdata", "tests"]
   exclude_file = []
   exclude_regex = ["_test.go"]
   exclude_unchanged = false
   follow_symlink = false
   full_bin = ""
-  ignore_dangerous_root_dir = false
   include_dir = []
   include_ext = ["go", "tpl", "tmpl", "html"]
   include_file = []
@@ -49,7 +46,6 @@ tmp_dir = "tmp"
 
 [proxy]
   app_port = 0
-  app_start_timeout = 0
   enabled = false
   proxy_port = 0
 
