ci: set test to not use TUI

--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -41,7 +41,7 @@ jobs:
           purge-prefixes: build-${{ runner.os }}-
 
       - name: Testing
-        run: nix develop -c process-compose up -f process-compose.yaml
+        run: nix develop -c process-compose up -f process-compose.yaml -t=false
 
       - name: Pretty moon logs
         uses: appthrust/moon-ci-retrospect@v1
