feat: handle attack and change actions on server

--- a/server/moon.yml
+++ b/server/moon.yml
@@ -6,6 +6,6 @@ tasks:
       persistent: true
 
   test:
-    command: 'pnpm vitest run --no-color --bail=1'
+    command: 'pnpm vitest run --no-color --bail=1 --fileParallelism=false'
   setup:
     command: 'pnpm install'
