--- a/compose.yml
+++ b/compose.yml
@@ -21,6 +21,19 @@ services:
     restart: unless-stopped
     networks:
       - app-network
+    environment:
+      # API
+      API_PORT: "8080"
+      # DB
+      DB_URI: "postgresql://postgres:postgres@pokesocket-db:5432/postgres"
+      # LOGGING Configuration
+      LOGGING_LEVEL: "debug"
+      LOGGING_PRETTY: "yes"
+      # CORS Configuration
+      ALLOWED_ORIGINS: "http://localhost:3001,http://localhost:3000,http://example.com"
+      ALLOWED_CONTENT_TYPES: "application/json,text/plain"
+      ALLOWED_METHODS: "GET,POST,PUT,DELETE,PATCH"
+      ALLOWED_HEADERS: "Content-Type,Authorization"
   db:
     build:
       context: ./db/game
