--- a/infra/app.yaml
+++ b/infra/app.yaml
@@ -31,6 +31,19 @@ services:
     labels:
       - "wud.watch=true"
       - "wud.display.name=PokeSocket Server"
+    environment:
+      # API
+      API_PORT: "8080"
+      # DB
+      DB_URI: "postgresql://postgres:postgres@pokesocket-db:5432/postgres"
+      # LOGGING Configuration
+      LOGGING_LEVEL: "debug"
+      LOGGING_PRETTY: "yes"
+      # CORS Configuration
+      ALLOWED_ORIGINS: "http://localhost:3001,http://localhost:3000,http://example.com"
+      ALLOWED_CONTENT_TYPES: "application/json,text/plain"
+      ALLOWED_METHODS: "GET,POST,PUT,DELETE,PATCH"
+      ALLOWED_HEADERS: "Content-Type,Authorization"
 
   db:
     image: smaugtur/pokesocket-db:latest
